infrastructure/k8s/istio/virtual-service-product.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-service-vs
  namespace: ecommerce
spec:
  hosts:
    - product-service
  http:
    - match:
        - headers:
            x-user-role:
              exact: premium
      route:
        - destination:
            host: product-service
            subset: v2
    - route:
        - destination:
            host: product-service
            subset: v1
          weight: 90
        - destination:
            host: product-service
            subset: v2
          weight: 10
